# cytopipe

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
results/locations/26159/: A02-1-Nuclei.csv  A02-2-Nuclei.csv  A02-3-Nuclei.csv  A02-4-Nuclei.csv
results/metadata/: index.csv
runinfo/000/htex_default_for_cytotable/certificates/: client.key  client.key_secret  server.key  server.key_secret
runinfo/000/submit_scripts/: parsl.htex_default_for_cytotable.block-0.1781608193.507914.sh
runinfo/001/htex_default_for_cytotable/certificates/: client.key  client.key_secret  server.key  server.key_secret
runinfo/001/submit_scripts/: parsl.htex_default_for_cytotable.block-0.1781608201.3884642.sh
runinfo/002/htex_default_for_cytotable/certificates/: client.key  client.key_secret  server.key  server.key_secret
runinfo/002/submit_scripts/: parsl.htex_default_for_cytotable.block-0.1781608218.032989.sh  parsl.htex_default_for_cytotable.block-0.1781608218.032989.sh.err
runinfo/003/htex_default_for_cytotable/certificates/: client.key  client.key_secret  server.key  server.key_secret
runinfo/003/submit_scripts/: parsl.htex_default_for_cytotable.block-0.1781608225.945956.sh  parsl.htex_default_for_cytotable.block-0.1781608225.945956.sh.err
src/cytopipe/: __init__.py  bridge.py  cli.py  columns.py  convert.py  io.py  parquet.py  parsl_configs.py  paths.py
src/cytopipe/aggregate/: __init__.py  cli.py  median.py
src/cytopipe/bridge/: __init__.py  cli.py  index.py  locations.py  platemap.py  source.py
src/cytopipe/cellprofiler_deepprofiler/: __init__.py  index.py  locations.py
src/cytopipe/conversion/: cli.py  parquet.py
src/cytopipe/convert/: __init__.py  cli.py  parquet.py
src/cytopipe/loaddata/: __init__.py  build.py  cli.py  scan.py
src/cytopipe/report/: __init__.py  cli.py  data.py  figures.py  theme.py
tests/: conftest.py  test_bridge.py  test_cli.py  test_cli_smoke.py  test_loaddata.py  test_parquet.py  test_report.py
tests/aggregate/: test_median.py
tests/bridge/: test_bridge.py  test_index.py  test_locations.py  test_platemap.py  test_source.py
tests/convert/: test_parquet.py
tests/fixtures/: platemap_default.csv  platemap_small.csv
tests/fixtures/cellprofiler/26159/measurement/: Image.csv
tests/fixtures/cellprofiler/26159/measurement/locations/: A02-1-Nuclei.csv  A02-2-Nuclei.csv
tests/loaddata/: test_build.py  test_loaddata.py  test_scan.py
tests/report/: test_data.py  test_figures.py  test_theme.py
