[project]
name = "cytopipe"
version = "0.1.0"
description = "Data-management/glue layer (CytoTable-based) for a Nextflow-orchestrated cell-painting feature-extraction pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "cytotable>=0.0.11",
]

[project.scripts]
cytopipe = "cytopipe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cytopipe"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
