[project]
name = "cytopipe"
version = "1.0.0"
description = "Data-management/glue layer for a cell-painting feature-extraction pipeline"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.8",
    "cytotable>=1.2.3",
    "pandas>=3.0.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "duckdb>=1.5.4",
    "pyarrow>=15",
]

[project.scripts]
cytopipe = "cytopipe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cytopipe"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=9.1.1",
    "pytest-cov>=6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
